# mewmo

./: .dockerignore  .env.example  .gitignore  .specify  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  eslint.config.js  eslint.config.mjs  index.html  journal.md  lessons  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  specs  tsconfig.json  turbo.json  vite.config.ts  vitest.config.ts
.claude/: hooks  settings.local.json.example  skills
.playwright-cli/: page-2026-05-21T14-34-43-332Z.yml
.specify/: feature.json
app/: .gitignore  CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json  fetcher.json
app/src-tauri/icons/: icon.icns
app/src-tauri/skills/: SKILL.md
app/src-tauri/skills/capture/: SKILL.md
app/src-tauri/skills/lint/: SKILL.md
app/src-tauri/skills/query/: SKILL.md
app/src-tauri/skills/search/: SKILL.md
app/src-tauri/src/: attachments.rs  clip_parser.rs  db.rs  lib.rs
app/src-tauri/src/commands/: clips.rs  knowledge_base.rs  mod.rs  notes.rs  search.rs  subscriptions.rs  vault.rs
app/src-tauri/src/migrations/: v6_subscription.sql  vault_meta_v1.sql  vault_meta_v2_fts_index.sql
app/src-tauri/src/subscription/: adapter.rs
app/src-tauri/src/vault/: frontmatter.rs  ingest.rs  init.rs  io.rs  meta_db.rs  mod.rs  query.rs  search.rs  slug.rs
docker/: .env  docker-compose.yml
docs/: 00-prd.md  01-hook-system.md  01-prd.md  02-architecture.md  03-agent-tasks.md  PRD.html  interaction-spec.md  multi-agent-scaffold-prompt.md  testing-sop.md
lessons/: codemirror-live-preview-踩坑.md  date-bucket-rolling-vs-calendar.md  ddl-migration-idempotent.md  git-reset-hard-覆盖未提交改动.md  sub-agent-指令优先于项目规则.md  tauri-react-桌面app反复踩坑.md  worktree-shared-user-data.md  产品调研维度偏窄.md  双态-UI-结构同构.md  (+2 more)
(+694 files in other folders)
